<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Patient Log</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Submit">Submit</string>
    <string name="Adtl">Additional Info</string>
    <string name="Question">How are you feeling today?</string>
    <string name="sSR0">Select Your Star rating 1 being Worst and 5 being Best</string>
    <string name="sSR1">Terrible</string>
    <string name="sSR2">Bad</string>
    <string name="sSR3">Average</string>
    <string name="sSR4">Good</string>
    <string name="sSR5">Best</string>
    <string name="Quest">Question</string>
    <string name="Hist">History</string>
    <string name="Can">Cancel</string>
    <string name="Next">Next</string>
    <string name="Prev">Previous</string>
    <string name="Exit">&quot;Exit&quot;</string>
    <string name="Graph">&quot;Graph&quot;</string>
    <string name="Admin">&quot;Admin Test&quot;</string>
    <string name="DropTable">&quot;Drop Table&quot;</string>
    <string name="FillTable">&quot;Fill Table&quot;</string>
    <string name="Export">&quot;Export Log&quot;</string>

</resources>